# senjor

./: .gitignore  LICENSE  README.md  conf.py  index.rst  pyproject.toml
.trunk/: trunk.yaml
demo/: __init__.py  settings.py
demo/apps/chat/: admin.py  apps.py  models.py
demo/apps/chat/migrations/: 0001_initial.py
docs/: senjor_controllers.rst  senjor_roadmap.rst  senjor_templates.rst
docs/core/: index.rst  schema.rst
senjor/: __init__.py  apps.py  events.py  setup.py  signals.py  urls.py
senjor/core/: __init__.py  attributes.py  exceptions.py  schema.py  utils.py
senjor/decorators/: __init__.py  arguments.py
senjor/management/commands/: runserver.py
senjor/models/: __init__.py  base.py
senjor/models/fields/: __init__.py  base.py  common.py  deferred.py  types.py
senjor/models/fields/related/: common.py  relations.py
senjor/settings/: __init__.py  base.py  defaults.py  graphene.py
senjor/static/django_socketio/js/: graphiql-plugin-explorer.umd.js
senjor/static/graphene_django/: graphiql.js
senjor/static/graphql/: graphiql.html  graphiql.min.css  index.umd.js  style.css
senjor/static/senjor/: .gitignore
senjor/templates/graphene/: graphiql.html
senjor/templates/graphql/: graphiql.html
senjor/tests/: model_to_query.py
src/: __init__.py  apps.py  setup.py
src/decorators/: security.py
src/graphql/: core.py  demo.py
src/models/: __init__.py  db_schema.py
src/models/fields/: __init__.py
src/settings/: __init__.py  base.py  defaults.py  graphene.py
src/static/django_socketio/css/: graphiql.min.css
(+2 files in other folders)
